@@ -11,5 +11,6 @@
 /* Boilerplate for 'pointer++; pointerc--;' */
 #define shift(p, d)	p++; d--
 
-extern char *basename(const char path[]);
 extern int afterchar(const char s[], int c);
+extern char *basename(const char path[]);
+extern char *ssafe(const char *s);
