@@ -1,0 +1,68 @@
+.\"
+.\" Sccsid @(#)write.1	0.1 (takusuman) 4/4/24
+.\" Parts taken from write(1), Unix 32V:
+.\" Copyright(C) Caldera International Inc. 2001-2002. All rights reserved.
+.\"
+.\" SPDX-Licence-Identifier: Caldera
+.\"
+.TH WRITE 1 "09/29/2024" "Heirloom Toolchest" "User Commands" 
+.SH NAME
+write  \-  write to another user
+.SH SYNOPSIS
+.B write
+user [ ttyname ]
+.SH DESCRIPTION
+.I Write
+copies lines from your terminal to that of
+another user.
+When first called,
+it sends the message
+.PP
+     Message from yourname yourttyname...
+.PP
+The recipient of the message should write back at this point.
+Communication continues until an end of file is
+read from the terminal or an interrupt is sent.
+At that point
+.I write
+writes `EOT' on the other terminal and exits.
+.PP
+If you want to write to a user who is logged in more than once,
+the
+.I ttyname
+argument may be used to indicate the
+appropriate terminal name.
+.PP
+Permission to write may be denied or granted by use of the
+.I mesg
+command.
+At the outset writing is allowed.
+Certain commands, in particular
+.I nroff
+and
+.IR  pr (1)
+disallow
+messages in order to prevent messy output.
+.PP
+If the character `!' is found at the beginning of a line,
+.I write
+calls the shell
+to execute the rest of the
+line as a command.
+.PP
+The following protocol is suggested for using
+.IR write :
+when you first write to another user, wait for him to
+write back before starting to send.
+Each party should end each message with a distinctive
+signal\(em\fB(o)\fR
+for `over' is conventional\(emthat the other may reply.
+.B (oo)
+for `over and out' is suggested when conversation
+is about to be terminated.
+.SH FILES
+utmp(5) 	to find user
+.br
+/bin/sh 	to execute `!'
+.SH "SEE ALSO"
+mesg(1), who(1), mail(1), wall(1m), utmp(5)
