@@ -1,6 +1,9 @@
 Release ...
 * build/mk.config, chroot, nawk: Adding -ltinfo for static compilation with
   glibc and making changes to adhere to C standards (patch by Gabriel Souza).
+* [NEW] wall, write: New implementation ported from UNIX 7th (a.k.a. 32V),
+  bulletproofed against buffer overflows and the CVE-2024-28085, which is
+  available as the ssafe() function at libcommon.
 * rm: Alias '-e' flag to more known '-v' for verbose.
 * date, shl: Fix compilation on platforms where (struct utmpx).ut_tv is not
   of type 'timeval'.
@@ -64,7 +67,7 @@ Release 240220
 * [NEW] timeout: Complete implementation with extended payloads.
 * readlink: Different help messages for both UCB and default variants.
 
-Release 230503 
+Release 230503
 * chroot: "docs: Update date at chroot.8 manual page."
 * chroot: "chore: Remove comment, will move to GitHub"
 * chroot: "docs: Rewrote chroot(8) manual page"
@@ -86,7 +89,7 @@ Release 230305
 
 Release 230228
 * [NEW] readlink: New implementation, extensively based on OpenBSD's.
-* readlink: It's installed at /usr/ucb per default and symbolic/hard linked to /usr/5bin. 
+* readlink: It's installed at /usr/ucb per default and symbolic/hard linked to /usr/5bin.
 
 Release 230120
 * Notes for the library directories if linking against the GNU C library.
